@@ -9,7 +9,7 @@ Muldis D general purpose data types
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Types version 0.51.0.
+This document is Muldis::D::Core::Types version 0.52.0.
 
 =head1 PREFACE
 
@@ -153,7 +153,7 @@ This is a structure data type.  C<Bool> consists of just the 2 values
 C<false> and C<true>.  A C<Bool> represents a truth value, and is the
 result type of any C<is_identical> or C<is_not_identical> routine; it is
 the only essential general-purpose scalar data type of a generic B<D>
-language, although not the only essential one in B<Muldis D>.  A C<Bool>
+language, although not the only essential one in Muldis D.  A C<Bool>
 has 2 system-defined possreps, named C<name> and C<int>.  The C<name>
 possrep directly matches the conception of the type as consisting of 2
 character string values; it consists of 1 C<Cat.Name>-typed attribute whose
