@@ -9,7 +9,7 @@ Muldis D catalog-defining data types
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Types_Catalog version 0.51.0.
+This document is Muldis::D::Core::Types_Catalog version 0.52.0.
 
 =head1 PREFACE
 
@@ -335,10 +335,11 @@ functions|updaters|procedures.
 
 These are the few central system-defined data types that have special
 hard-coded meanings and are not defined like any other types.
-Specifically, it declares these 14 standard types (all in the
-C<sys.std.Core.Type> namespace): C<Universal>, C<Empty>, C<Scalar>,
+Specifically, it declares these 14 standard types: in the
+C<sys.std.Core.Type> namespace, C<Universal>, C<Empty>, C<Scalar>,
 C<Tuple>, C<Relation>, C<QuasiScalar>, C<QuasiTuple>, C<QuasiRelation>,
-C<Reference>, C<Remnant>, C<(Func|Proc|Type|OrdDetFunc)Ref>.
+C<Reference>, C<Remnant>; in the C<sys.std.Core.Type.Cat> namespace,
+C<(Func|Proc|Type|OrdDetFunc)Ref>.
 
 =item C<sca_npr_types> - C<Cat.SysScaNPRTypeSet>
 
