@@ -9,7 +9,7 @@ How to format Plain Text Muldis D
 
 =head1 VERSION
 
-This document is Muldis::D::Dialect::PTMD_Tiny version 0.51.0.
+This document is Muldis::D::Dialect::PTMD_Tiny version 0.52.0.
 
 =head1 PREFACE
 
