@@ -9,7 +9,7 @@ Muldis D extension adding more generic relational operators
 
 =head1 VERSION
 
-This document is Muldis::D::Ext::Relation version 0.51.0.
+This document is Muldis::D::Ext::Relation version 0.52.0.
 
 =head1 PREFACE
 
