@@ -10,7 +10,7 @@ use Test::More;
 plan( 'tests' => 2 );
 
 use_ok( 'Muldis::D' );
-is( $Muldis::D::VERSION, qv('0.51.0'),
+is( $Muldis::D::VERSION, qv('0.52.0'),
     'Muldis::D is the correct version' );
 
 1; # Magic true value required at end of a reusable file's code.
