@@ -1,7 +1,7 @@
                                  Muldis::D
 ---------------------------------------------------------------------------
 
-2008-11-xx  Darren Duncan <perl@DarrenDuncan.net>
+2008-11-29  Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::D version 0.52.0 is released on CPAN as
     Muldis-D-0.52.0.tar.gz.
@@ -24,7 +24,7 @@
     were.  To see what actual changes were made to files, the individual
     change items still will list them as they did before.
 
-    (D.pm, Basics.pod, Types.pod, Routines.pod, PTMD_Tiny.pod,
+    * (D.pm, Basics.pod, Types.pod, Routines.pod, PTMD_Tiny.pod,
     HDMD_Perl_Tiny.pod, Integer.pod, Blob.pod, Text.pod, Tuple.pod,
     Relation.pod, Array.pod, Bag.pod, Rational.pod, Temporal.pod)  Updated
     all the standard references to numbers that are zero or greater so they
@@ -33,6 +33,8 @@
     Temporal.pod specialty data types "UInt(23|59)" and "URatLT62" to
     "NNInt(23|59)" and "NNRatLT62".  A few plain-text Tiny grammar tokens
     were likewise renamed, from a "u" prefix to a "nn" prefix.
+
+    * (Types.pod, Types_Catalog.pod)  Minor misc fixes.
 
 2008-11-29  Darren Duncan <perl@DarrenDuncan.net>
 
